--- a/AzureLetsEncrypt/AzureLetsEncrypt.csproj
+++ b/AzureLetsEncrypt/AzureLetsEncrypt.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="ACMESharpCore" Version="2.0.0.49-beta1" />
     <PackageReference Include="ACMESharpCore.Crypto" Version="2.0.0.41-beta1" />
+    <PackageReference Include="Microsoft.Azure.Management.Dns" Version="2.2.0-preview" />
     <PackageReference Include="Microsoft.Azure.Management.WebSites" Version="1.7.1-preview" />
     <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.0.3" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="1.5.0" />
