--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,8 @@ version: '{build}'
 pull_requests:
   do_not_increment_build_number: true
 
+skip_branch_with_pr: true
+
 skip_commits:
   files:
     - azuredeploy.json
