--- a/AzureLetsEncrypt/AzureLetsEncrypt.csproj
+++ b/AzureLetsEncrypt/AzureLetsEncrypt.csproj
@@ -7,11 +7,11 @@
   <ItemGroup>
     <PackageReference Include="ACMESharpCore" Version="2.0.0.49-beta1" />
     <PackageReference Include="ACMESharpCore.Crypto" Version="2.0.0.41-beta1" />
-    <PackageReference Include="Microsoft.Azure.Management.Dns" Version="2.2.0-preview" />
+    <PackageReference Include="Microsoft.Azure.Management.Dns" Version="3.0.0" />
     <PackageReference Include="Microsoft.Azure.Management.WebSites" Version="2.0.0" />
     <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.0.3" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="1.6.0" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.19" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="1.6.2" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.22" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
