Adding retry options

--- a/AzureAppService.LetsEncrypt/AzureAppService.LetsEncrypt.csproj
+++ b/AzureAppService.LetsEncrypt/AzureAppService.LetsEncrypt.csproj
@@ -7,7 +7,7 @@
     <PackageReference Include="ACMESharpCore" Version="2.0.1.105" />
     <PackageReference Include="ACMESharpCore.Crypto" Version="2.0.1.105" />
     <PackageReference Include="DnsClient" Version="1.2.0" />
-    <PackageReference Include="DurableTask.ActivityProxy" Version="1.0.0-beta" />
+    <PackageReference Include="DurableTask.ActivityProxy" Version="1.0.0-preview" />
     <PackageReference Include="Microsoft.Azure.Management.Dns" Version="3.0.1" />
     <PackageReference Include="Microsoft.Azure.Management.WebSites" Version="2.2.0" />
     <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.0.3" />
