--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,11 @@
 version: '{build}'
 
+branches:
+  only:
+    - master
+
 pull_requests:
   do_not_increment_build_number: true
-
-skip_branch_with_pr: true
 
 skip_commits:
   files:
