--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,7 @@ trigger:
 
 variables:
   buildConfiguration: Release
+  dotnetSdkVersion: '2.2.401'
   isGitHubTag: $[startsWith(variables['Build.SourceBranch'], 'refs/tags/v')]
 
 stages:
@@ -17,6 +18,12 @@ stages:
     pool:
       vmImage: 'windows-2019'
     steps:
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: $(dotnetSdkVersion)
+      displayName: 'Install .NET Core SDK $(dotnetSdkVersion)'
+
     - task: DotNetCoreCLI@2
       inputs:
         command: 'publish'
