--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 variables:
   buildConfiguration: Release
-  dotnetSdkVersion: '2.2.401'
+  dotnetSdkVersion: '2.2.x'
   isGitHubTag: $[startsWith(variables['Build.SourceBranch'], 'refs/tags/v')]
 
 stages:
