--- a/AppService.Acmebot/AppService.Acmebot.csproj
+++ b/AppService.Acmebot/AppService.Acmebot.csproj
@@ -4,15 +4,15 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ACMESharpCore" Version="2.0.1.105" />
+    <PackageReference Include="ACMESharpCore" Version="2.1.0.113" />
     <PackageReference Include="ACMESharpCore.Crypto" Version="2.0.1.105" />
     <PackageReference Include="DnsClient" Version="1.2.0" />
-    <PackageReference Include="DurableTask.ActivityProxy" Version="1.0.1" />
+    <PackageReference Include="DurableTask.ActivityProxy" Version="2.0.0-preview" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Azure.Management.Dns" Version="3.0.1" />
     <PackageReference Include="Microsoft.Azure.Management.WebSites" Version="2.2.0" />
     <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.3.1" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="1.8.3" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.0.0-beta3" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
   </ItemGroup>
