Refactor static page

--- a/AppService.Acmebot/AppService.Acmebot.csproj
+++ b/AppService.Acmebot/AppService.Acmebot.csproj
@@ -21,7 +21,7 @@
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="index.html">
+    <None Update="static\add-certificate.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="local.settings.json">
