--- a/AppService.Acmebot/AppService.Acmebot.csproj
+++ b/AppService.Acmebot/AppService.Acmebot.csproj
@@ -6,13 +6,12 @@
   <ItemGroup>
     <PackageReference Include="ACMESharpCore" Version="2.2.0.148" />
     <PackageReference Include="ACMESharpCore.Crypto" Version="2.2.0.148" />
+    <PackageReference Include="Azure.ResourceManager.Dns" Version="1.0.0-preview.1" />
+    <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0-preview.2" />
     <PackageReference Include="DnsClient" Version="1.3.2" />
     <PackageReference Include="DurableTask.TypedProxy" Version="2.1.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
-    <PackageReference Include="Microsoft.Azure.Management.Dns" Version="3.0.1" />
-    <PackageReference Include="Microsoft.Azure.Management.ResourceManager" Version="3.10.0-preview" />
     <PackageReference Include="Microsoft.Azure.Management.WebSites" Version="3.1.0" />
-    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.5.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.8" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.9" />
