Remove System.Reactive.xml from published files

--- a/AppService.Acmebot/AppService.Acmebot.csproj
+++ b/AppService.Acmebot/AppService.Acmebot.csproj
@@ -33,4 +33,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <Target Name="DeleteXmlDocumentation" AfterTargets="Publish">
+    <Delete Files="$(PublishDir)System.Reactive.xml" />
+  </Target>
 </Project>
