--- a/AppService.Acmebot/AppService.Acmebot.csproj
+++ b/AppService.Acmebot/AppService.Acmebot.csproj
@@ -4,8 +4,6 @@
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ACMESharpCore" Version="2.2.0.148" />
-    <PackageReference Include="ACMESharpCore.Crypto" Version="2.2.0.148" />
     <PackageReference Include="DnsClient" Version="1.4.0" />
     <PackageReference Include="DurableTask.TypedProxy" Version="2.2.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
@@ -17,6 +15,10 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.12" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
     <PackageReference Include="WebJobs.Extensions.HttpApi" Version="1.1.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ACMESharpCore\src\ACMESharp.DotNetCore\ACMESharp.DotNetCore.csproj" />
+    <ProjectReference Include="..\ACMESharpCore\src\ACMESharp\ACMESharp.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -34,6 +36,6 @@
     </None>
   </ItemGroup>
   <Target Name="DeleteXmlDocumentation" AfterTargets="Publish">
-    <Delete Files="$(PublishDir)System.Reactive.xml" />
+    <Delete Files="$(PublishDir)System.Reactive.xml;$(PublishDir)ACMESharp.xml;$(PublishDir)ACMESharp.DotNetCore.xml" />
   </Target>
 </Project>
