--- a/AppService.Acmebot/AppService.Acmebot.csproj
+++ b/AppService.Acmebot/AppService.Acmebot.csproj
@@ -35,7 +35,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <Target Name="DeleteXmlDocumentation" AfterTargets="Publish">
-    <Delete Files="$(PublishDir)System.Reactive.xml;$(PublishDir)ACMESharp.xml;$(PublishDir)ACMESharp.DotNetCore.xml" />
+  <Target Name="DeleteFiles" AfterTargets="Publish">
+    <Delete Files="$(PublishDir)System.Reactive.xml" />
   </Target>
 </Project>
