--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,4 @@ jobs:
       run: dotnet build -c Release
 
     - name: Lint C# code
-      run: dotnet format --check --exclude ACMESharpCore --verbosity detailed
+      run: dotnet format --verify-no-changes --exclude ACMESharpCore --verbosity detailed
