Adding bicep version template

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,6 @@ jobs:
 
     - name: Lint C# code
       run: dotnet format --check --exclude ACMESharpCore --verbosity detailed
+
+    - name: Lint Bicep template
+      run: az bicep build -f azuredeploy.bicep && git diff --exit-code --quiet
