--- a/AppService.Acmebot/AppService.Acmebot.csproj
+++ b/AppService.Acmebot/AppService.Acmebot.csproj
@@ -7,7 +7,7 @@
     <PackageReference Include="DnsClient" Version="1.6.0" />
     <PackageReference Include="DurableTask.TypedProxy" Version="2.2.1" />
     <PackageReference Include="Azure.ResourceManager.Dns" Version="1.0.0-preview.1" />
-    <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0-preview.2" />
+    <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0-beta.6" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Azure.Management.WebSites" Version="3.1.2" />
     <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.2" />
