Update publish workflow

--- a/.editorconfig
+++ b/.editorconfig
@@ -193,3 +193,11 @@ indent_size= 2
 # Html files
 [*.html]
 indent_size= 2
+
+# Bicep files
+[*.bicep]
+indent_size= 2
+
+# YAML files
+[*.yml]
+indent_size= 2
