--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   DOTNET_VERSION: 3.1.x
+  BICEP_VERSION: 0.5.6
 
 jobs:
   build:
@@ -21,6 +22,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
+
+    - name: Use Bicep ${{ env.BICEP_VERSION }}
+      run: az bicep install --version v${{ env.BICEP_VERSION }}
 
     - name: Install .NET Core format tool
       run: dotnet tool update -g dotnet-format
