Upgrade to Acmebot v4 (#346)
* Upgrade to Azure Functions v4

* Use standard PEM reader

* Remove function proxies config

* Remove `routePrefix` config

* Update dotnet-format dry-run option

* Optimize dotnet-format

* Optimize Web UI hosting

* Update publish storage account name

* Rebuild arm template from bicep

* Update Resource Manager SDK

* Use latest C# feature

* Revert deployment template for v3

* Update to New Azure Resource Manager SDK (#395)

* Update to New Azure Resource Manager SDK

* Update Durable Functions

* Update Bicep api version

--- a/.editorconfig
+++ b/.editorconfig
@@ -32,7 +32,7 @@ csharp_new_line_between_query_expression_clauses = true
 csharp_indent_block_contents = true
 csharp_indent_braces = false
 csharp_indent_case_contents = true
-csharp_indent_case_contents_when_block = true
+csharp_indent_case_contents_when_block = false
 csharp_indent_switch_labels = true
 csharp_indent_labels = one_less_than_current
 
@@ -131,6 +131,7 @@ csharp_style_conditional_delegate_call = true:suggestion
 csharp_style_prefer_index_operator = false:none
 csharp_style_prefer_range_operator = false:none
 csharp_style_pattern_local_over_anonymous_function = false:none
+csharp_style_namespace_declarations = file_scoped:warning
 
 # Space preferences
 csharp_space_after_cast = false
