--- a/AppService.Acmebot/.gitignore
+++ b/AppService.Acmebot/.gitignore
@@ -262,3 +262,8 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+# Service dependencies
+Properties/serviceDependencies.json
+Properties/serviceDependencies.*.json
+Properties/ServiceDependencies/
