--- a/AppService.Acmebot/AppService.Acmebot.csproj
+++ b/AppService.Acmebot/AppService.Acmebot.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="[6.0.*,7.0.0)" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.6.0" />
     <PackageReference Include="Newtonsoft.json" Version="13.0.3" />
+    <PackageReference Include="System.Memory.Data" Version="6.0.0" />
     <PackageReference Include="WebJobs.Extensions.HttpApi" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
